haproxy-practice/ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-for-ingress-check
spec:
  type : NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
