haproxy-practice/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: nginx-ingress-for-ingress-check
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: kibria.ingress.local
    http:
      paths:
      - path: /something(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service-for-ingress-check
            port: 
              number: 80
